turn list immutable